<resources>
    <string name="app_name">Music Player</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Music Library</string>
    <string name="title_activity_login">Music Player</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome ! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_song">"Add Song</string>
    <string name="title_of_song">Song Title</string>
    <string name="singer">Singer</string>
    <string name="review">Review</string>
    <string name="time">Duration</string>
    <string name="grade">Rating</string>
    <string name="add">Add Song</string>
    <string name="update">Update Song</string>
    <string name="edit_song">Edit Song</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="artist">Artist:</string>
    <string name="genre">Genre:</string>
    <string name="rate">Rate:</string>
    <string name="info">Info:</string>
    <string name="link">Link:</string>
    <string name="tracktitle">Title:</string>
    <string name="search_button">Search</string>
    <string name="playlisttitle">Name</string>
    <string name="discuss_about_header">title</string>
    <string name="genreLabel">Genre</string>
    <string name="selectgenre">Select Genre</string>
    <string name="listDelete">Delete</string>
</resources>
