<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EBF3F4">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:weightSum="1.0"
            card_view:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/relativeLayout2"
            card_view:layout_constraintTop_toTopOf="@+id/relativeLayout2">


            <Button
                android:id="@+id/removeFromList"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:text="delete"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="parent"
            card_view:layout_constraintStart_toEndOf="parent">

            <TextView
                android:id="@+id/song_name"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_name"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_genre"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_artist"
                android:layout_weight="4"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_duration"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_genre"
                android:layout_weight="4"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/song_rate"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_duration"
                android:layout_weight="4"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/song_review"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_rate"
                android:layout_weight="4"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/song_link"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_review"
                android:layout_weight="4"
                android:autoLink="all"
                android:textColor="@color/colorLinkBlue"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/relativeLayout2"
            card_view:layout_constraintEnd_toStartOf="@+id/relativeLayout2"
            card_view:layout_constraintHorizontal_bias="0.43"
            card_view:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/song_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/tracktitle"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_artist_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_name_label"
                android:layout_weight="4"
                android:text="@string/artist"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_artist_label"
                android:layout_weight="4"
                android:text="@string/genre"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_genre_label"
                android:layout_weight="4"
                android:text="@string/time"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/song_rate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_duration_label"
                android:layout_weight="4"
                android:text="@string/rate"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/song_review_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_rate_label"
                android:layout_weight="4"
                android:text="@string/info"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/song_link_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_review_label"
                android:text="@string/link"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="normal" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>